# ros2_rknn_yolo

./: .gitattributes  .gitignore  .gitmodules  README.md
librknn_yolov8_pose/: CMakeLists.txt  package.xml
librknn_yolov8_pose/include/librknn_yolov8_pose/: rknn_yolov8_pose.h
librknn_yolov8_pose/model/: convert.py  download_model.sh  yolov8_pose.rknn  yolov8n-pose.onnx
librknn_yolov8_pose/src/: audio_utils.c  image_drawing.c  image_utils.c  postprocess.cc  rknn_yolov8_pose.cc  yolov8-pose.cc
rknn_yolo/: CMakeLists.txt  package.xml
rknn_yolo/include/rknn_yolo/: yolo_node.hpp
rknn_yolo/launch/: visualizer_pose_launch.py  yolo_launch.py
rknn_yolo/src/: yolo_node.cpp  yolo_visualizer_pose.cpp
