<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>librknn_yolov8_pose</name>
  <version>0.0.0</version>
  <description>RKNN accelerated YOLOV8 pose backend</description>
  <maintainer email="jalenlv543@qq.com">QIMING LYU</maintainer>
  <license>PRIVATE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>bboxes_kpoints_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
