<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rknn_yolo</name>
  <version>0.0.0</version>
  <description>RKNN accelerated YOLO front end</description>
  <maintainer email="jalenlv543@qq.com">QIMING LYU</maintainer>
  <license>PRIVATE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ninja-build</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>bboxes_kpoints_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>librknn_yolov8_pose</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
